--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1329,7 +1329,7 @@
                                                               </svg>
                                                             </span>
                                                           </div>
-                                                          <div class="_z1k5n76">Join a video call</div>
+                                                          <div class="icon-card__title">Join a video call</div>
                                                           <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Use Zoom to participate on your desktop or mobile
                                                             device. After you book you’ll receive an email with a link and details on how to join.</span>
                                                           </div>
@@ -1350,7 +1350,7 @@
                                                               </svg>
                                                             </span>
                                                           </div>
-                                                          <div class="_z1k5n76">Book a private group</div>
+                                                          <div class="icon-card__title">Book a private group</div>
                                                           <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Kat can host private groups of any size, up to 100
                                                                 guests. Private group rates start at ₱4,651.</span>
                                                           </div>
@@ -6214,7 +6214,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <li aria-hidden="false" data-key="Join a video call_0" class="feature__airbnb-li"
                                                         style="border-width: 0px 6px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                         <div data-key="Join a video call_0" class="h-full">
-                                                          <div class="_qzp5rw5">
+                                                          <div class="icon-card">
                                                             <div>
                                                               <div class="mb-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
@@ -6223,7 +6223,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                     d="M27 3a2 2 0 0 1 1.995 1.85L29 5l-.001 14.816 2.43 6.482a2 2 0 0 1-.881 2.44l-.145.074-.144.06a2 2 0 0 1-.523.12l-.179.008H2.443a2 2 0 0 1-1.928-2.532l.055-.17L3 19.819 3 5a2 2 0 0 1 1.697-1.977l.154-.018L5 3zm.306 18H4.692l-2.249 6h27.114zM19 23v2h-6v-2zm8-18H5l-.001 14h22zM16 7a1 1 0 1 1 0 2 1 1 0 0 1 0-2z">
                                                                   </path>
                                                                 </svg></div>
-                                                              <div class="_z1k5n76">Join a video call</div>
+                                                              <div class="icon-card__title">Join a video call</div>
                                                               <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Use Zoom to participate on your desktop or mobile
                                                                   device. After you book you’ll receive an email with a link and details on how to join.</span></div>
                                                             </div>
@@ -6233,7 +6233,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <li aria-hidden="false" data-key="Book a private group_1" class="feature__airbnb-li"
                                                         style="border-width: 0px 6px; max-width: 33.3333%; flex: 0 0 33.3333%;">
                                                         <div data-key="Book a private group_1" class="h-full">
-                                                          <div class="_qzp5rw5">
+                                                          <div class="icon-card">
                                                             <div>
                                                               <div class="mb-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
@@ -6242,7 +6242,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                     d="m22 7c2.7614237 0 5 2.23857625 5 5 0 1.4483542-.6158223 2.7528755-1.5999105 3.6660075 3.2075261 1.3080072 5.4902937 4.4154553 5.5960734 8.0686302l.0038371.2653623h-2c0-3.5261219-2.6071882-6.4433024-5.9989899-6.9289666l-.0001094-2.2420576c1.1647219-.4120906 1.9990993-1.5230936 1.9990993-2.8289758 0-1.6568542-1.3431458-3-3-3-1.5976809 0-2.9036609 1.24892-2.9949073 2.8237272l-.0050927.1762728.0819616.0625271c1.1677123.9152829 1.9180384 2.3387539 1.9180384 3.9374729 0 1.4479059-.615441 2.7520678-1.5989966 3.6651593 3.207085 1.309499 5.4893907 4.4166818 5.5951595 8.0694784l.0038371.2653623h-2c0-3.5261219-2.6071882-6.4433024-5.9989899-6.9289666l-.0001094-2.2420576c1.1647219-.4120906 1.9990993-1.5230936 1.9990993-2.8289758 0-1.6568542-1.3431458-3-3-3s-3 1.3431458-3 3c0 1.3062521.8348501 2.4175144 2.0000889 2.8293257l-.0000889 2.2415643c-3.3148214.4741509-5.8804754 3.2706475-5.99594098 6.6884602l-.00405902.2406498h-2c0-3.7671593 2.31452169-6.9937332 5.5991096-8.335266-.9836686-.9126662-1.5991096-2.2168281-1.5991096-3.664734 0-1.598719.7503261-3.02219 1.9180384-3.9374729l.0819616-.0625271c0-1.6568542-1.3431458-3-3-3-1.65685425 0-3 1.3431458-3 3 0 1.3062521.8348501 2.4175144 2.00008893 2.8293257l-.00008893 2.2415643c-3.31482137.4741509-5.8804754 3.2706475-5.99594098 6.6884602l-.00405902.2406498h-2c0-3.7671593 2.31452169-6.9937332 5.5991096-8.335266-.98366859-.9126662-1.5991096-2.2168281-1.5991096-3.664734 0-2.76142375 2.23857625-5 5-5 2.4601119 0 4.505252 1.77670575 4.9222714 4.1169685.3461998-.0766772.707259-.1169685 1.0777286-.1169685s.7315288.0402913 1.0790344.1167309c.4156259-2.33994891 2.4608009-4.1167309 4.9209656-4.1167309z">
                                                                   </path>
                                                                 </svg></div>
-                                                              <div class="_z1k5n76">Book a private group</div>
+                                                              <div class="icon-card__title">Book a private group</div>
                                                               <div class="text-sm"><span class="ll4r2nl dir dir-ltr">Kat can host private groups of any size, up to 100
                                                                   guests. Private group rates start at ₱4,651.</span></div>
                                                             </div>
