--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11224,7 +11224,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
                         <div>
                           <div class="_1ksvx0f1">
-                            <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                            <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                                 aria-live="polite">Showing photo 1 of 17</span><span aria-hidden="true">1 / 17</span>
                             </div>
                             <div class="_1rxxw62">
@@ -11382,7 +11382,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
                         <div>
                           <div class="_1ksvx0f1">
-                            <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                            <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                                 aria-live="polite">Showing photo 2 of 17</span><span aria-hidden="true">2 / 17</span>
                             </div>
                             <div class="_1rxxw62">
@@ -11498,7 +11498,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
                         <div>
                           <div class="_1ksvx0f1">
-                            <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                            <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                                 aria-live="polite">Showing photo 3 of 17</span><span aria-hidden="true">3 / 17</span>
                             </div>
                             <div class="_1rxxw62">
@@ -11615,7 +11615,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
                         <div>
                           <div class="_1ksvx0f1">
-                            <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                            <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                                 aria-live="polite">Showing photo 4 of 17</span><span aria-hidden="true">4 / 17</span>
                             </div>
                             <div class="_1rxxw62">
@@ -11732,7 +11732,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                       <div data-plugin-in-point-id="PHOTO_VIEWER_MODAL" data-section-id="PHOTO_VIEWER_MODAL">
                         <div>
                           <div class="_1ksvx0f1">
-                            <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                            <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                                 aria-live="polite">Showing photo 5 of 17</span><span aria-hidden="true">5 / 17</span>
                             </div>
                             <div class="_1rxxw62">
