--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -19542,7 +19542,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 1 of 98</span><span aria-hidden="true">1 / 98</span></div>
                   <div class="_1rxxw62">
@@ -19634,7 +19634,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 4 of 98</span><span aria-hidden="true">4 / 98</span></div>
                   <div class="_1rxxw62">
@@ -24020,7 +24020,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 1 of 98</span><span aria-hidden="true">1 / 98</span></div>
                   <div class="_1rxxw62">
@@ -24135,7 +24135,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 2 of 98</span><span aria-hidden="true">2 / 98</span></div>
                   <div class="_1rxxw62">
