--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -12107,7 +12107,7 @@
               >
                 <div>
                   <div class="_1ksvx0f1">
-                    <div class="_1b1whhx">
+                    <div class="lightbox__counter">
                       <span
                         class="visually-hidden dir dir-ltr"
                         aria-atomic="true"
