--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -16640,7 +16640,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 1 of 56</span><span aria-hidden="true">1 / 56</span></div>
                   <div class="_1rxxw62">
@@ -16733,7 +16733,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 4 of 56</span><span aria-hidden="true">4 / 56</span></div>
                   <div class="_1rxxw62">
@@ -19410,7 +19410,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 1 of 56</span><span aria-hidden="true">1 / 56</span></div>
                   <div class="_1rxxw62">
@@ -19525,7 +19525,7 @@
               style="position: relative;">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
+                  <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true"
                       aria-live="polite">Showing
                       photo 5 of 56</span><span aria-hidden="true">5 / 56</span></div>
                   <div class="_1rxxw62">
