--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -18798,7 +18798,7 @@
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx">
+                  <div class="lightbox__counter">
                     <span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing photo 1 of
                       63</span><span aria-hidden="true">1 / 63</span>
                   </div>
@@ -23841,7 +23841,7 @@
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx">
+                  <div class="lightbox__counter">
                     <span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing photo 1 of
                       63</span><span aria-hidden="true">1 / 63</span>
                   </div>
@@ -24023,7 +24023,7 @@
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx">
+                  <div class="lightbox__counter">
                     <span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing photo 2 of
                       63</span><span aria-hidden="true">2 / 63</span>
                   </div>
@@ -24201,7 +24201,7 @@
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx">
+                  <div class="lightbox__counter">
                     <span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing photo 3 of
                       63</span><span aria-hidden="true">3 / 63</span>
                   </div>
@@ -24379,7 +24379,7 @@
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx">
+                  <div class="lightbox__counter">
                     <span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing photo 4 of
                       63</span><span aria-hidden="true">4 / 63</span>
                   </div>
@@ -24557,7 +24557,7 @@
             <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative">
               <div>
                 <div class="_1ksvx0f1">
-                  <div class="_1b1whhx">
+                  <div class="lightbox__counter">
                     <span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing photo 5 of
                       63</span><span aria-hidden="true">5 / 63</span>
                   </div>
