--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -6552,7 +6552,7 @@
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div>
               <div class="_1ksvx0f1">
-                <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
+                <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
                     photo 1 of 63</span><span aria-hidden="true">1 / 63</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
@@ -8201,7 +8201,7 @@
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div>
               <div class="_1ksvx0f1">
-                <div class="_1b1whhx"><span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
+                <div class="lightbox__counter"><span class="visually-hidden dir dir-ltr" aria-atomic="true" aria-live="polite">Showing
                     photo 1 of 63</span><span aria-hidden="true">1 / 63</span></div>
                 <div class="_1rxxw62">
                   <div class="_1qkaeb4">
