photos__btn-wrapper

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -5762,7 +5762,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             </div>
           </div>
         </div>
-        <div class="s1hnrp4x dir dir-ltr"><a data-modal="#lightbox-modal" data-lightbox="#lightbox-media-1"
+        <div class="photos__btn-wrapper dir dir-ltr"><a data-modal="#lightbox-modal" data-lightbox="#lightbox-media-1"
             href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=0dfa1fb1-11b0-4e7f-bd4c-57a09293f210&amp;searchId=30a3e09a-8f17-462d-953b-9ef00c0582f3&amp;sectionId=a09a756c-c994-4370-8013-d63a9389b387&amp;source=p2&amp;modal=PHOTOS"
             class="_1ju7xj0j">
             <div class="bi0ns8x dir dir-ltr">
