btn-light-small

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -245,7 +245,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_ekor09"><button type="button" class="_1ju7xj0j">
+                                            <div class="_ekor09"><button type="button" class="btn-light-small">
                                                 <div class="flex-items-center"><svg viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                     role="presentation" focusable="false"
