--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1306,7 +1306,7 @@
                                                     <div class="_o7c33ig">Let the Host know why you're traveling and when you'll check in.</div>
                                                   </div>
                                                   <div class="products-container__book-it-default"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
-                                                      class="_1ju7xj0j">Add</button></div>
+                                                      class="btn-light-small">Add</button></div>
                                                 </div>
                                                 <div class="confirm-pay__container"></div>
                                               </div>
@@ -1329,7 +1329,7 @@
                                                   <div class="_o7c33ig">Add and confirm your phone number to get trip updates.</div>
                                                 </div>
                                                 <div class="products-container__book-it-default"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
-                                                    class="_1ju7xj0j">Add</button></div>
+                                                    class="btn-light-small">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
                                             </div>
@@ -1349,7 +1349,7 @@
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
                                                 </div>
-                                                <div class="products-container__book-it-default"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
+                                                <div class="products-container__book-it-default"><button data-modal="#profile-photo-modal" type="button" class="btn-light-small">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
                                             </div>
@@ -4744,7 +4744,7 @@
                                                     <div class="_o7c33ig">Let the Host know why you're traveling and when you'll check in.</div>
                                                   </div>
                                                   <div class="products-container__book-it-default"><button data-modal="#message-the-host-modal" data-testid="checkout_platform.FIRST_MESSAGE.add" type="button"
-                                                      class="_1ju7xj0j">Add</button></div>
+                                                      class="btn-light-small">Add</button></div>
                                                 </div>
                                                 <div class="confirm-pay__container"></div>
                                               </div>
@@ -4761,7 +4761,7 @@
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
                                                 </div>
-                                                <div class="products-container__book-it-default"><button data-modal="#profile-photo-modal" type="button" class="_1ju7xj0j">Add</button></div>
+                                                <div class="products-container__book-it-default"><button data-modal="#profile-photo-modal" type="button" class="btn-light-small">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
                                             </div>
@@ -4779,7 +4779,7 @@
                                                   <div class="_o7c33ig">Add and confirm your phone number to get trip updates.</div>
                                                 </div>
                                                 <div class="products-container__book-it-default"><button data-modal="#phone-number-modal" data-testid="checkout_platform.PHONE_VERIFICATION.add" type="button"
-                                                    class="_1ju7xj0j">Add</button></div>
+                                                    class="btn-light-small">Add</button></div>
                                               </div>
                                               <div class="confirm-pay__container"></div>
                                             </div>
