--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -176,7 +176,7 @@
                               aria-expanded="false"
                               aria-haspopup="true"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-light-small"
                               id='resources-menu-btn'
                             >
                               <div class="_j1kt73">Menu</div>
