login-pane__header

--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -186,7 +186,7 @@
                                 aria-labelledby="panel-header"
                               >
                                 <div data-testid="login-pane">
-                                  <div class="_je2ned">
+                                  <div class="login-pane__header">
                                     <h3 class="_u72b34">Welcome to Airbnb</h3>
                                   </div>
                                   <form
@@ -3569,7 +3569,7 @@
                             </header>
                             <div class="auth-container__panel-header" aria-labelledby="panel-header">
                               <div data-testid="login-pane">
-                                <div class="_je2ned">
+                                <div class="login-pane__header">
                                   <h3 class="_u72b34">Welcome to Airbnb</h3>
                                 </div>
                                 <form
