--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6742,7 +6742,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       </header>
                                                       <div class="modal__body">
                                                         <div data-testid="login-pane">
-                                                          <div class="_je2ned">
+                                                          <div class="login-pane__header">
                                                             <h3 class="_u72b34">Welcome to Airbnb</h3>
                                                           </div>
                                                           <form action="/authenticate" method="POST" novalidate="" data-testid="auth-form"><input type="hidden"
